load("@yarn//@bazel/typescript:index.bzl", "ts_project")
load("@yarn//@bazel/esbuild:index.bzl", "esbuild")

ts_project(
    name = "lib",
    srcs = ["main.ts"],
    tsconfig = "//:tsconfig",
    deps = [
        "@yarn//@types/koa",
        "@yarn//@types/node",
        "@yarn//commander",
        "@yarn//koa",
    ],
)

esbuild(
    name = "bundle",
    entry_point = "main.ts",
    minify = True,
    platform = "node",
    tool = select({"@bazel_tools//src/conditions:linux_x86_64": "@esbuild_linux//:bin/esbuild"}),
    deps = [":lib"],
)

load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

nodejs_image(
    name = "src",
    data = [":bundle"],
    entry_point = "bundle.js",
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")

docker_push(
    name = "push",
    image = ":lunar",
    registry = "ghcr.io",
    repository = "uhthomas/lunar",
    tag = "{STABLE_GIT_COMMIT}",
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_bundle")

docker_bundle(
    name = "bundle",
    images = {
        "ghcr.io/uhthomas/lunar:latest": ":src",
        "ghcr.io/uhthomas/lunar:{STABLE_GIT_REF}": ":src",
    },
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push_tag",
    bundle = ":bundle",
    # Pushing layers concurrently sometimes fails.
    # See GitHub support ticket 885486.
    sequential = True,
)
