load("@yarn//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "lib",
    srcs = ["main.ts"],
    tsconfig = "//:tsconfig",
    deps = [
        "@yarn//@types/koa",
        "@yarn//@types/node",
        "@yarn//commander",
        "@yarn//koa",
    ],
)

ts_project(
    name = "lib_test",
    testonly = 1,
    srcs = ["main_test.ts"],
    tsconfig = "//:tsconfig",
    deps = [":lib"],
)

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")

nodejs_test(
    name = "src_test",
    data = [":lib_test"],
    entry_point = "main_test.ts",
)

load("@yarn//@bazel/esbuild:index.bzl", "esbuild")

esbuild(
    name = "bundle",
    entry_point = "main.ts",
    minify = True,
    platform = "node",
    tool = select({
        "@bazel_tools//src/conditions:darwin": "@esbuild_darwin//:bin/esbuild",
        "@bazel_tools//src/conditions:linux_x86_64": "@esbuild_linux//:bin/esbuild",
        "@bazel_tools//src/conditions:windows": "@esbuild_windows//:esbuild.exe",
    }),
    deps = [":lib"],
)

load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

nodejs_image(
    name = "src",
    data = [":bundle"],
    entry_point = "bundle.js",
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")

docker_push(
    name = "push",
    image = ":src",
    registry = "ghcr.io",
    repository = "uhthomas/lunar",
    tag = "{STABLE_GIT_COMMIT}",
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_bundle")

docker_bundle(
    name = "image_bundle",
    images = {
        "ghcr.io/uhthomas/lunar:latest": ":src",
        "ghcr.io/uhthomas/lunar:{STABLE_GIT_REF}": ":src",
    },
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push_tag",
    bundle = ":image_bundle",
    # Pushing layers concurrently sometimes fails.
    # See GitHub support ticket 885486.
    sequential = True,
)
